# libzenit

./: .gitignore  AGENTS.md  BENCHMARK.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  allocator.h.gcov  bitset.c.gcov  codecov.yaml  conanfile.py  coverage.clean  map.c.gcov  tsan.supp
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_allocator.c  benchmark_arena.c  benchmark_base64.c  benchmark_bitset.c  benchmark_bloom.c  benchmark_csv.c  benchmark_deque.c  benchmark_dir.c  benchmark_glob.c  benchmark_graph.c  benchmark_heap.c  benchmark_hex.c  benchmark_io.c  benchmark_json.c  benchmark_list.c  benchmark_logger.c  benchmark_lru.c  benchmark_map.c  benchmark_path.c  benchmark_pool.c  benchmark_queue.c  benchmark_result.c  benchmark_ring.c  benchmark_semver.c  benchmark_set.c  benchmark_sort.c  benchmark_spsc.c  benchmark_stack.c  benchmark_state.c  benchmark_str.c  benchmark_string.c  benchmark_thread_pool.c  benchmark_timer.c  benchmark_trie.c  benchmark_uri.c  benchmark_uuid.c  benchmark_vector.c  benchmark_version.c
include/: libzenit.h
include/libzenit/: allocator.h  arena.h  base64.h  benchmark.h  bitset.h  bloom.h  csv.h  deque.h  dir.h  glob.h  graph.h  heap.h  hex.h  io.h  json.h  list.h  logger.h  lru.h  map.h  optional.h  path.h  pool.h  queue.h  result.h  ring.h  semver.h  set.h  sort.h  spsc.h  stack.h  state.h  str.h  string.h  thread_pool.h  timer.h  trie.h  uri.h  uuid.h  vector.h  version.h
scripts/: benchmark_report.py  checksum.py
src/: CMakeLists.txt  _hash_common.h  allocator.c  arena.c  base64.c  benchmark.c  bitset.c  bloom.c  csv.c  deque.c  dir.c  glob.c  graph.c  heap.c  hex.c  io.c  json.c  list.c  logger.c  lru.c  map.c  path.c  pool.c  queue.c  result.c  ring.c  semver.c  set.c  sort.c  spsc.c  stack.c  state.c  str.c  string.c  thread_pool.c  timer.c  trie.c  uri.c  uuid.c  vector.c  (+1 more)
tests/: CMakeLists.txt  test_allocator.c  test_allocator_malloc_fail.c  test_arena.c  test_arena_malloc_fail.c  test_base64.c  test_base64_malloc_fail.c  test_benchmark.c  test_bitset.c  test_bitset_malloc_fail.c  test_bloom.c  test_bloom_malloc_fail.c  test_csv.c  test_csv_malloc_fail.c  test_deque.c  test_deque_malloc_fail.c  test_dir.c  test_dir_malloc_fail.c  test_glob.c  test_glob_malloc_fail.c  test_graph.c  test_graph_malloc_fail.c  test_heap.c  test_heap_malloc_fail.c  test_hex.c  test_hex_malloc_fail.c  test_io.c  test_io_malloc_fail.c  test_json.c  test_json_cov.c  test_json_malloc_fail.c  test_list.c  test_list_malloc_fail.c  test_logger.c  test_logger_malloc_fail.c  test_lru.c  test_lru_malloc_fail.c  test_malloc_fail.c  test_malloc_fail.h  test_map.c  (+40 more)
